2.nginx-ingress-cis/2-NIC/1.basic-ingress/2.cafe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  ingressClassName: nginx-plus
  tls:
  - hosts:
    - cafe.ing.example.com
    secretName: cafe-secret
  rules:
  - host: cafe.ing.example.com
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
